--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "peerDependencies": {
     "eslint": "^5.11.1",
     "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-jsdoc": "^3.14.1",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.0"
