--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "peerDependencies": {
     "eslint": "^5.11.1",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-jsdoc": "^3.14.1",
     "eslint-plugin-jsx-a11y": "^6.1.2",
