--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-jsdoc": "^15.11.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "eslint-plugin-react": "^7.16.0"
   }
 }
